# mini_axis

./: CMakeLists.txt  main.cpp  qt_app.cpp  qt_sink.h
include/axis/: qt_app.h
include/axis/app/: local_logger.h  qt_loggerspace.h  qt_sink.h
src/: local_logger.cpp  qt_loggerspace.cpp  qt_sink.cpp
